// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs [NEGATIVE] should render with wrong props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.375rem;
  -webkit-column-gap: 2rem;
  column-gap: 2rem;
}

.c1 {
  position: relative;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  margin-top: 0.625rem;
  cursor: pointer;
}

.c1:after {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 0.25rem;
  width: 100%;
  content: '';
  background-color: #4475E3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0.125rem;
  opacity: 0;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  color: #2F65E0;
}

.c1:hover:after {
  background-color: #2F65E0;
}

.c1:active {
  color: #2057D5;
}

.c1:active:after {
  background-color: #2057D5;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="tabs"
    >
      <div
        class="c1"
        data-testid="tab"
      />
      <div
        class="c1"
        data-testid="tab"
      />
    </div>
  </div>
</body>
`;

exports[`Tabs test tabs render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.375rem;
  -webkit-column-gap: 2rem;
  column-gap: 2rem;
}

.c1 {
  position: relative;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  margin-top: 0.625rem;
  cursor: pointer;
}

.c1:after {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 0.25rem;
  width: 100%;
  content: '';
  background-color: #4475E3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0.125rem;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  color: #2F65E0;
}

.c1:hover:after {
  background-color: #2F65E0;
}

.c1:active {
  color: #2057D5;
}

.c1:active:after {
  background-color: #2057D5;
}

.c2 {
  position: relative;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  margin-top: 0.625rem;
  cursor: pointer;
}

.c2:after {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 0.25rem;
  width: 100%;
  content: '';
  background-color: #4475E3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0.125rem;
  opacity: 0;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover {
  color: #2F65E0;
}

.c2:hover:after {
  background-color: #2F65E0;
}

.c2:active {
  color: #2057D5;
}

.c2:active:after {
  background-color: #2057D5;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="tabs"
    >
      <div
        class="c1"
        data-testid="tab"
      >
        tab_1
      </div>
      <div
        class="c2"
        data-testid="tab"
      >
        tab_2
      </div>
    </div>
  </div>
</body>
`;
